# Python-WEB-11

./: main.py  pyproject.toml  sql_app.db
docs/: conf.py  index.rst
docs/_build/doctrees/: environment.pickle  index.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
migrations/versions/: 2ae7eee6ee41_add_user.py  5633c4fb8447_add_role_of_user.py  5a86ad619c88_init.py
src/: chemas.py
src/conf/: config.ini  config.py  messages.py
src/database/: db.py  models.py
src/repository/: contacts.py  users.py
src/routes/: auth.py  contacts.py  users.py
src/services/: auth.py  cloud_image.py  roles.py
tests/: test_route_auth.py  test_route_contacts.py  test_unit_repository_contacts.py
